feat(prueba unitaria y readmed): En este commit se agrega alguna prueba unitaria para tener una convertura a 100% y se ajusto el readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -22,7 +23,10 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "types": [
+  "jest"
+]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
